--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,11 +33,25 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
+      - name: create text file
+        run: |
+         echo "I know it's not much,
+         I have nothing fit for a king,
+         except for a heart singing hallelujah" > song.txt
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: song-lyrics
+          path: song.txt
       - name: Build website
         run: npm run build
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: song-lyrics
       - name: Deploy
         run: echo "Deploying..."
